--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,16 @@
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
-}
+
 
 .container {
     text-align: center;
 }
 
-#ecgChart {
-    width: 100%;
-    max-width: 600px;
-    height: 400px;
-    margin-top: 20px;
+#chartdiv {
+  width: 100%;
+  height: 500px;
 }
 
 #timestampDisplay {
     margin: 20px 0;
     font-size: 1.2rem;
 }
+
